--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </style>
   </head>
   <body>
-
+<div id="map"></div>
  <script>
 let map;
 
@@ -63,6 +63,7 @@ function initMap() {
     </gmp-map>
   </body>
 </html>
+
 
 
 
