--- a/index.html
+++ b/index.html
@@ -1,69 +1,59 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Marker</title>
-    <!-- The callback parameter is required, so we use console.debug as a noop -->
-    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=console.debug&libraries=maps,marker&v=beta">
-    </script>
+    <meta charset="utf-8">
+    <title>河流地图</title>
     <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      gmp-map {
-        height: 100%;
-      }
-
-      /* Optional: Makes the sample page fill the window. */
-      html,
-      body {
+      html, body {
         height: 100%;
         margin: 0;
         padding: 0;
       }
+      #map {
+        height: 100%;
+        width: 100%;
+      }
     </style>
   </head>
   <body>
-<div id="map"></div>
- <script>
-let map;
+    <!-- 地图容器 -->
+    <div id="map"></div>
 
-function initMap() {
-  map = new google.maps.Map(document.getElementById("map"), {
-    center: { lat: -12, lng: 38 }, // 莫桑比克附近
-    zoom: 6
-  });
+    <script>
+      let map;
 
-  // 用 fetch 代替 loadGeoJson，这样能修改坐标
-  fetch('heliu.json')
-    .then(res => res.json())
-    .then(data => {
-      // 自动修正坐标顺序 [lat, lng] → [lng, lat]
-      data.features.forEach(f => {
-        if (f.geometry && f.geometry.type === "LineString") {
-          f.geometry.coordinates = f.geometry.coordinates.map(coord => [coord[1], coord[0]]);
-        }
-      });
+      function initMap() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: -12, lng: 38 }, // 莫桑比克附近
+          zoom: 6
+        });
 
-      // 加载修正后的数据
-      map.data.addGeoJson(data);
+        // 加载GeoJSON（必须是同目录下的heliu.json）
+        fetch('heliu.json')
+          .then(res => res.json())
+          .then(data => {
+            // 修正经纬度顺序
+            data.features.forEach(f => {
+              if (f.geometry && f.geometry.type === "LineString") {
+                f.geometry.coordinates = f.geometry.coordinates.map(coord => [coord[1], coord[0]]);
+              }
+            });
 
-      // 设置线条样式
-      map.data.setStyle({
-        strokeColor: '#0000FF',
-        strokeWeight: 3
-      });
-    })
-    .catch(err => console.error('加载 GeoJSON 失败:', err));
-}
-</script>
+            map.data.addGeoJson(data);
 
+            // 样式
+            map.data.setStyle({
+              strokeColor: '#0000FF',
+              strokeWeight: 3
+            });
+          })
+          .catch(err => console.error('加载 GeoJSON 失败:', err));
+      }
+    </script>
 
-    
-    <gmp-map center="40.12150192260742,-100.45039367675781" zoom="4" map-id="DEMO_MAP_ID">
-      
-    </gmp-map>
+    <!-- 用老版 JS API 正确加载 -->
+    <script async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap">
+    </script>
   </body>
 </html>
-
-
-
-
