--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
           })
           .catch(err => console.error('加载 GeoJSON 失败:', err));
       }
-
+</script>
     <!-- 用老版 JS API 正确加载 -->
     <script async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap">
     </script>
   </body>
 </html>
+
 
