--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       let map;
 
       function initMap() {
-     
+        
+       map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 0, lng: 0 },
+          zoom: 2
+        });
 
         // 加载 JSON 文件
         fetch('heliu.json')
@@ -54,6 +58,7 @@
     </script>
   </body>
 </html>
+
 
 
 
