--- a/index.html
+++ b/index.html
@@ -20,44 +20,71 @@
     <div id="map"></div>
 
    <script>
-      let map;
+  let map;
 
-      function initMap() {
-        
-       map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 0, lng: 0 },
-          zoom: 2
+  function initMap() {
+    map = new google.maps.Map(document.getElementById("map"), {
+      center: { lat: 0, lng: 0 },
+      zoom: 2,
+      mapTypeId: "terrain" // 用地形图更容易看河流
+    });
+
+    // 加载 GeoJSON
+    fetch('heliu.json')
+      .then(res => res.json())
+      .then(data => {
+        // 递归修复函数，适用于 LineString / MultiLineString / Polygon / MultiPolygon
+        function fixCoordinates(coords) {
+          // 如果是数字对 [x,y]
+          if (typeof coords[0] === "number" && typeof coords[1] === "number") {
+            const [a, b] = coords;
+            // 如果第一个数在 -90~90 之间（像纬度），第二个在 -180~180（像经度），说明反了
+            if (Math.abs(a) <= 90 && Math.abs(b) > 90) {
+              return [b, a]; // 交换为 [lng, lat]
+            }
+            return [a, b]; // 保持原样
+          }
+          // 如果是多层数组（线/多线/多边形）
+          return coords.map(fixCoordinates);
+        }
+
+        // 遍历所有 Feature
+        data.features.forEach(f => {
+          if (f.geometry && f.geometry.coordinates) {
+            f.geometry.coordinates = fixCoordinates(f.geometry.coordinates);
+          }
         });
 
-        // 加载 JSON 文件
-        fetch('heliu.json')
-          .then(res => res.json())
-          .then(data => {
-            // 自动检测坐标顺序，如果第一组坐标大于90，则可能是 [lat,lng]，自动交换
-            data.features.forEach(f => {
-              if (f.geometry && f.geometry.type === "LineString") {
-                f.geometry.coordinates = f.geometry.coordinates.map(c => {
-                  // 如果纬度大于90，交换顺序
-                  if (Math.abs(c[0]) <= 90 && Math.abs(c[1]) <= 180) return c; // 正常 [lng,lat]
-                  return [c[1], c[0]]; // 交换成 [lng,lat]
-                });
-              }
-            });
+        // 加载修正后的数据
+        map.data.addGeoJson(data);
 
-            // 添加到地图
-            map.data.addGeoJson(data);
+        // 样式设置
+        map.data.setStyle({
+          strokeColor: "#0000FF",
+          strokeWeight: 2,
+          strokeOpacity: 0.8
+        });
 
-           
-          })
-          .catch(err => console.error('加载 GeoJSON 失败:', err));
-      }
+        // 点击提示
+        map.data.addListener("click", e => {
+          const name = e.feature.getProperty("name") || "未命名河流";
+          new google.maps.InfoWindow({
+            content: `<b>${name}</b>`,
+            position: e.latLng
+          }).open(map);
+        });
+      })
+      .catch(err => console.error("加载 GeoJSON 失败:", err));
+  }
 </script>
+
     <!-- 用老版 JS API 正确加载 -->
     <script async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap">
     </script>
   </body>
 </html>
+
 
 
 
