--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <body>
     <!-- 地图容器 -->
     <div id="map"></div>
-
+        <div id="panel">
+          <button id="clearBtn">清除测距</button>
+          <span id="distance">总距离：0 km</span>
+        </div>
    <script>
   let map;
 
@@ -82,8 +85,92 @@
     <script async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap">
     </script>
+    
+    <style>
+      html, body { height: 100%; margin: 0; padding: 0; }
+      #map { height: 100%; width: 100%; }
+      #panel {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        background: white;
+        padding: 8px 12px;
+        border-radius: 6px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+        font-family: sans-serif;
+        z-index: 999;
+      }
+    </style>
+    <script>
+      let map;
+      let path = [];
+      let polyline;
+      let totalDistance = 0;
+
+      function initMap() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 0, lng: 0 },
+          zoom: 2
+        });
+
+        polyline = new google.maps.Polyline({
+          path: path,
+          geodesic: true,
+          strokeColor: "#FF0000",
+          strokeOpacity: 0.8,
+          strokeWeight: 2,
+          map: map
+        });
+
+        map.addListener("click", (e) => {
+          path.push(e.latLng);
+          polyline.setPath(path);
+          if (path.length > 1) {
+            const last = path[path.length - 2];
+            const dist = haversineDistance(last, e.latLng);
+            totalDistance += dist;
+            document.getElementById("distance").innerText = `总距离：${totalDistance.toFixed(2)} km`;
+          }
+          new google.maps.Marker({
+            position: e.latLng,
+            map: map,
+            title: `点 ${path.length}`
+          });
+        });
+
+        document.getElementById("clearBtn").addEventListener("click", () => {
+          path = [];
+          totalDistance = 0;
+          polyline.setPath([]);
+          document.getElementById("distance").innerText = "总距离：0 km";
+          // 清除所有 marker
+          for (const m of markers) m.setMap(null);
+          markers = [];
+        });
+      }
+
+      let markers = [];
+
+      function haversineDistance(p1, p2) {
+        const R = 6371; // 地球半径 km
+        const lat1 = p1.lat() * Math.PI / 180;
+        const lat2 = p2.lat() * Math.PI / 180;
+        const dLat = lat2 - lat1;
+        const dLng = (p2.lng() - p1.lng()) * Math.PI / 180;
+        const a = Math.sin(dLat / 2) ** 2 +
+                  Math.cos(lat1) * Math.cos(lat2) *
+                  Math.sin(dLng / 2) ** 2;
+        return 2 * R * Math.asin(Math.sqrt(a));
+      }
+    </script>
+
+
+
+
+    
   </body>
 </html>
+
 
 
 
