--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }
       #panel {
         position: absolute;
-        top: 10px;
+        bottom: 10px;
         left: 10px;
         background: white;
         padding: 8px 12px;
@@ -147,3 +147,4 @@
     </script>
   </body>
 </html>
+
