--- a/index.html
+++ b/index.html
@@ -141,10 +141,8 @@
       }
     </script>
 
-    <!-- Google Maps JS -->
-    <script async
-      src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
-    </script>
+    <!-- 用老版 JS API 正确加载 --> <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap"> </script>
   </body>
 </html>
+
 
