--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>河流地图 + 测距工具</title>
+    <meta charset="utf-8" />
+    <title>全球河流地图 + 测距工具</title>
     <style>
       html, body {
         height: 100%;
@@ -38,34 +38,33 @@
       let map;
       let path = [];
       let polyline;
-      let totalDistance = 0;
       let markers = [];
+      let totalDistance = 0;
+      let infoWindow;
 
       function initMap() {
         // 初始化地图
         map = new google.maps.Map(document.getElementById("map"), {
           center: { lat: 0, lng: 0 },
           zoom: 2,
-          mapTypeId: "terrain"
+          mapTypeId: "terrain",
         });
 
-        // 加载河流 GeoJSON 文件
-        fetch('heliu.json')
-          .then(res => res.json())
-          .then(data => {
-            // 修复坐标格式
+        // ===== 加载河流 GeoJSON 文件 =====
+        fetch("heliu.json")
+          .then((res) => res.json())
+          .then((data) => {
+            // 修正坐标格式：支持 [lat,lng] 或 [lng,lat]
             function fixCoordinates(coords) {
               if (typeof coords[0] === "number" && typeof coords[1] === "number") {
                 const [a, b] = coords;
-                if (Math.abs(a) <= 90 && Math.abs(b) > 90) {
-                  return [b, a];
-                }
+                if (Math.abs(a) <= 90 && Math.abs(b) > 90) return [b, a];
                 return [a, b];
               }
               return coords.map(fixCoordinates);
             }
 
-            data.features.forEach(f => {
+            data.features.forEach((f) => {
               if (f.geometry && f.geometry.coordinates) {
                 f.geometry.coordinates = fixCoordinates(f.geometry.coordinates);
               }
@@ -73,63 +72,90 @@
 
             map.data.addGeoJson(data);
             map.data.setStyle({
-              strokeColor: "#0000FF",
-              strokeWeight: 2,
-              strokeOpacity: 0.8
+              strokeColor: "#0077FF",
+              strokeWeight: 1.5,
+              strokeOpacity: 0.8,
             });
 
-            map.data.addListener("click", e => {
+            map.data.addListener("click", (e) => {
               const name = e.feature.getProperty("name") || "未命名河流";
-              new google.maps.InfoWindow({
+              if (infoWindow) infoWindow.close();
+              infoWindow = new google.maps.InfoWindow({
                 content: `<b>${name}</b>`,
-                position: e.latLng
-              }).open(map);
+                position: e.latLng,
+              });
+              infoWindow.open(map);
             });
           })
-          .catch(err => console.error("加载 GeoJSON 失败:", err));
+          .catch((err) => console.error("加载 GeoJSON 失败:", err));
 
-        // 初始化测距线
+        // ===== 初始化测距线 =====
         polyline = new google.maps.Polyline({
           path: path,
           geodesic: true,
           strokeColor: "#FF0000",
-          strokeOpacity: 0.8,
-          strokeWeight: 2,
-          map: map
+          strokeOpacity: 0.9,
+          strokeWeight: 2.5,
+          map: map,
         });
 
-        // 点击地图测距
+        // 点击地图添加点
         map.addListener("click", (e) => {
-          path.push(e.latLng);
-          polyline.setPath(path);
-          if (path.length > 1) {
-            const last = path[path.length - 2];
-            const dist = haversineDistance(last, e.latLng);
-            totalDistance += dist;
-            document.getElementById("distance").innerText = `总距离：${totalDistance.toFixed(2)} km`;
-          }
-          const marker = new google.maps.Marker({
-            position: e.latLng,
-            map: map,
-            title: `点 ${path.length}`
-          });
-          markers.push(marker);
+          addPoint(e.latLng);
         });
 
-        // 清除按钮功能
-        document.getElementById("clearBtn").addEventListener("click", () => {
-          path = [];
-          totalDistance = 0;
-          polyline.setPath([]);
-          document.getElementById("distance").innerText = "总距离：0 km";
-          markers.forEach(m => m.setMap(null));
-          markers = [];
+        // 右键删除最后一个点
+        map.addListener("rightclick", () => {
+          if (path.length > 0) {
+            path.pop();
+            polyline.setPath(path);
+            const lastMarker = markers.pop();
+            if (lastMarker) lastMarker.setMap(null);
+            recalcDistance();
+          }
         });
+
+        // 清除按钮
+        document.getElementById("clearBtn").addEventListener("click", clearAll);
       }
 
-      // 计算两点间球面距离
+      // 添加测距点
+      function addPoint(latLng) {
+        path.push(latLng);
+        polyline.setPath(path);
+
+        const marker = new google.maps.Marker({
+          position: latLng,
+          map: map,
+          title: `点 ${path.length}`,
+        });
+        markers.push(marker);
+
+        recalcDistance();
+      }
+
+      // 重新计算总距离
+      function recalcDistance() {
+        totalDistance = 0;
+        for (let i = 1; i < path.length; i++) {
+          totalDistance += haversineDistance(path[i - 1], path[i]);
+        }
+        document.getElementById("distance").innerText = `总距离：${totalDistance.toFixed(2)} km`;
+      }
+
+      // 清除全部测距
+      function clearAll() {
+        path = [];
+        totalDistance = 0;
+        polyline.setPath([]);
+        document.getElementById("distance").innerText = "总距离：0 km";
+        markers.forEach((m) => m.setMap(null));
+        markers = [];
+      }
+
+      // 球面距离（Haversine公式）
       function haversineDistance(p1, p2) {
-        const R = 6371; // 地球半径 (km)
+        const R = 6371; // 地球半径 km
         const lat1 = p1.lat() * Math.PI / 180;
         const lat2 = p2.lat() * Math.PI / 180;
         const dLat = lat2 - lat1;
@@ -141,8 +167,11 @@
       }
     </script>
 
+
+
     <!-- 用老版 JS API 正确加载 --> <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap"> </script>
   </body>
 </html>
+
 
 
