--- a/index.html
+++ b/index.html
@@ -35,143 +35,149 @@
     </div>
 
     <script>
-      let map;
-      let path = [];
-      let polyline;
-      let markers = [];
-      let totalDistance = 0;
-      let infoWindow;
+  let map;
+  let path = [];
+  let polyline;
+  let markers = [];
+  let totalDistance = 0;
+  let infoWindow;
 
-      function initMap() {
-        // 初始化地图
-        map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat: 0, lng: 0 },
-          zoom: 2,
-          mapTypeId: "terrain",
-        });
+  function initMap() {
+    map = new google.maps.Map(document.getElementById("map"), {
+      center: { lat: 0, lng: 0 },
+      zoom: 2,
+      mapTypeId: "terrain",
+    });
 
-        // ===== 加载河流 GeoJSON 文件 =====
-        fetch("heliu.json")
-          .then((res) => res.json())
-          .then((data) => {
-            // 修正坐标格式：支持 [lat,lng] 或 [lng,lat]
-            function fixCoordinates(coords) {
-              if (typeof coords[0] === "number" && typeof coords[1] === "number") {
-                const [a, b] = coords;
-                if (Math.abs(a) <= 90 && Math.abs(b) > 90) return [b, a];
-                return [a, b];
-              }
-              return coords.map(fixCoordinates);
-            }
+    // ===== 加载河流 =====
+    fetch("heliu.json")
+      .then((res) => res.json())
+      .then((data) => {
+        function fixCoordinates(coords) {
+          if (typeof coords[0] === "number" && typeof coords[1] === "number") {
+            const [a, b] = coords;
+            if (Math.abs(a) <= 90 && Math.abs(b) > 90) return [b, a];
+            return [a, b];
+          }
+          return coords.map(fixCoordinates);
+        }
 
-            data.features.forEach((f) => {
-              if (f.geometry && f.geometry.coordinates) {
-                f.geometry.coordinates = fixCoordinates(f.geometry.coordinates);
-              }
-            });
-
-            map.data.addGeoJson(data);
-            map.data.setStyle({
-              strokeColor: "#0077FF",
-              strokeWeight: 1.5,
-              strokeOpacity: 0.8,
-            });
-
-            map.data.addListener("click", (e) => {
-              const name = e.feature.getProperty("name") || "未命名河流";
-              if (infoWindow) infoWindow.close();
-              infoWindow = new google.maps.InfoWindow({
-                content: `<b>${name}</b>`,
-                position: e.latLng,
-              });
-              infoWindow.open(map);
-            });
-          })
-          .catch((err) => console.error("加载 GeoJSON 失败:", err));
-
-        // ===== 初始化测距线 =====
-        polyline = new google.maps.Polyline({
-          path: path,
-          geodesic: true,
-          strokeColor: "#FF0000",
-          strokeOpacity: 0.9,
-          strokeWeight: 2.5,
-          map: map,
-        });
-
-        // 点击地图添加点
-        map.addListener("click", (e) => {
-          addPoint(e.latLng);
-        });
-
-        // 右键删除最后一个点
-        map.addListener("rightclick", () => {
-          if (path.length > 0) {
-            path.pop();
-            polyline.setPath(path);
-            const lastMarker = markers.pop();
-            if (lastMarker) lastMarker.setMap(null);
-            recalcDistance();
+        data.features.forEach((f) => {
+          if (f.geometry && f.geometry.coordinates) {
+            f.geometry.coordinates = fixCoordinates(f.geometry.coordinates);
           }
         });
 
-        // 清除按钮
-        document.getElementById("clearBtn").addEventListener("click", clearAll);
-      }
-
-      // 添加测距点
-      function addPoint(latLng) {
-        path.push(latLng);
-        polyline.setPath(path);
-
-        const marker = new google.maps.Marker({
-          position: latLng,
-          map: map,
-          title: `点 ${path.length}`,
+        map.data.addGeoJson(data);
+        map.data.setStyle({
+          strokeColor: "#0077FF",
+          strokeWeight: 1.5,
+          strokeOpacity: 0.8,
         });
-        markers.push(marker);
 
+        map.data.addListener("click", (e) => {
+          const name = e.feature.getProperty("name") || "未命名河流";
+          if (infoWindow) infoWindow.close();
+          infoWindow = new google.maps.InfoWindow({
+            content: `<b>${name}</b>`,
+            position: e.latLng,
+          });
+          infoWindow.open(map);
+        });
+      });
+
+    // ===== 测距线初始化 =====
+    polyline = new google.maps.Polyline({
+      path: path,
+      geodesic: true,
+      strokeColor: "#FF0000",
+      strokeOpacity: 0.9,
+      strokeWeight: 2.5,
+      map: map,
+    });
+
+    // 点击地图添加测距点
+    map.addListener("click", (e) => {
+      addPoint(e.latLng);
+    });
+
+    // 右键撤销上一个点
+    map.addListener("rightclick", () => {
+      if (path.length > 0) {
+        path.pop();
+        polyline.setPath(path);
+        const last = markers.pop();
+        if (last) last.setMap(null);
         recalcDistance();
       }
+    });
 
-      // 重新计算总距离
-      function recalcDistance() {
-        totalDistance = 0;
-        for (let i = 1; i < path.length; i++) {
-          totalDistance += haversineDistance(path[i - 1], path[i]);
-        }
-        document.getElementById("distance").innerText = `总距离：${totalDistance.toFixed(2)} km`;
-      }
+    document.getElementById("clearBtn").addEventListener("click", clearAll);
+  }
 
-      // 清除全部测距
-      function clearAll() {
-        path = [];
-        totalDistance = 0;
-        polyline.setPath([]);
-        document.getElementById("distance").innerText = "总距离：0 km";
-        markers.forEach((m) => m.setMap(null));
-        markers = [];
-      }
+  // 添加测距点（使用黑色圆点）
+  function addPoint(latLng) {
+    path.push(latLng);
+    polyline.setPath(path);
 
-      // 球面距离（Haversine公式）
-      function haversineDistance(p1, p2) {
-        const R = 6371; // 地球半径 km
-        const lat1 = p1.lat() * Math.PI / 180;
-        const lat2 = p2.lat() * Math.PI / 180;
-        const dLat = lat2 - lat1;
-        const dLng = (p2.lng() - p1.lng()) * Math.PI / 180;
-        const a = Math.sin(dLat / 2) ** 2 +
-                  Math.cos(lat1) * Math.cos(lat2) *
-                  Math.sin(dLng / 2) ** 2;
-        return 2 * R * Math.asin(Math.sqrt(a));
-      }
-    </script>
+    const marker = new google.maps.Marker({
+      position: latLng,
+      map: map,
+      icon: {
+        path: google.maps.SymbolPath.CIRCLE, // 圆形符号
+        scale: 4,                            // 圆点大小
+        fillColor: "#000000",                // 黑色填充
+        fillOpacity: 1,
+        strokeColor: "#FFFFFF",              // 白色边缘
+        strokeWeight: 1,
+      },
+      clickable: false,
+    });
+    markers.push(marker);
+
+    recalcDistance();
+  }
+
+  // 重新计算总距离
+  function recalcDistance() {
+    totalDistance = 0;
+    for (let i = 1; i < path.length; i++) {
+      totalDistance += haversineDistance(path[i - 1], path[i]);
+    }
+    document.getElementById("distance").innerText =
+      `总距离：${totalDistance.toFixed(2)} km`;
+  }
+
+  // 清除所有测距
+  function clearAll() {
+    path = [];
+    totalDistance = 0;
+    polyline.setPath([]);
+    document.getElementById("distance").innerText = "总距离：0 km";
+    markers.forEach((m) => m.setMap(null));
+    markers = [];
+  }
+
+  // 球面距离
+  function haversineDistance(p1, p2) {
+    const R = 6371;
+    const lat1 = p1.lat() * Math.PI / 180;
+    const lat2 = p2.lat() * Math.PI / 180;
+    const dLat = lat2 - lat1;
+    const dLng = (p2.lng() - p1.lng()) * Math.PI / 180;
+    const a = Math.sin(dLat / 2) ** 2 +
+              Math.cos(lat1) * Math.cos(lat2) *
+              Math.sin(dLng / 2) ** 2;
+    return 2 * R * Math.asin(Math.sqrt(a));
+  }
+</script>
 
 
 
     <!-- 用老版 JS API 正确加载 --> <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap"> </script>
   </body>
 </html>
+
 
 
 
