--- a/index.html
+++ b/index.html
@@ -1,190 +1,138 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>全球河流地图 + 测距工具</title>
-    <style>
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        height: 100%;
-        width: 100%;
-      }
-      #panel {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        background: white;
-        padding: 8px 12px;
-        border-radius: 6px;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-        font-family: sans-serif;
-        z-index: 999;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
+<head>
+  <meta charset="utf-8">
+  <title>闭合多边形测面积</title>
+  <style>
+    html, body { height: 100%; margin: 0; padding: 0; }
+    #map { height: 100%; width: 100%; }
+    #panel {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      background: white;
+      padding: 8px 12px;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+      font-family: sans-serif;
+      z-index: 999;
+    }
+  </style>
+</head>
+<body>
+  <div id="map"></div>
+  <div id="panel">
+    <button id="clearBtn">清除</button>
+    <span id="info">总距离：0 km 面积：0 km²</span>
+  </div>
 
-    <div id="panel">
-      <button id="clearBtn">清除测距</button>
-      <span id="distance">总距离：0 km</span>
-    </div>
+  <script>
+    let map;
+    let path = [];
+    let polyline;
+    let markers = [];
+    let totalDistance = 0;
+    let polygonClosed = false;
 
-   <script>
-  let map;
-  let path = [];
-  let polyline;
-  let markers = [];
-  let totalDistance = 0;
-  let infoWindow;
-
-  function initMap() {
-    map = new google.maps.Map(document.getElementById("map"), {
-      center: { lat: 0, lng: 0 },
-      zoom: 2,
-      mapTypeId: "terrain",
-    });
-
-    // 加载河流数据
-    fetch("heliu.json")
-      .then(res => res.json())
-      .then(data => {
-        function fixCoordinates(coords) {
-          if (typeof coords[0] === "number" && typeof coords[1] === "number") {
-            const [a, b] = coords;
-            if (Math.abs(a) <= 90 && Math.abs(b) > 90) return [b, a];
-            return [a, b];
-          }
-          return coords.map(fixCoordinates);
-        }
-
-        data.features.forEach(f => {
-          if (f.geometry && f.geometry.coordinates)
-            f.geometry.coordinates = fixCoordinates(f.geometry.coordinates);
-        });
-
-        map.data.addGeoJson(data);
-        map.data.setStyle({
-          strokeColor: "#0077FF",
-          strokeWeight: 1.5,
-          strokeOpacity: 0.8,
-        });
-
-        map.data.addListener("click", e => {
-          const name = e.feature.getProperty("name") || "未命名河流";
-          if (infoWindow) infoWindow.close();
-          infoWindow = new google.maps.InfoWindow({
-            content: `<b>${name}</b>`,
-            position: e.latLng,
-          });
-          infoWindow.open(map);
-        });
+    function initMap() {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: {lat:0, lng:0},
+        zoom: 2,
+        mapTypeId: "terrain"
       });
 
-    // 初始化测距线
-    polyline = new google.maps.Polyline({
-      path: path,
-      geodesic: true,
-      strokeColor: "#FF0000",
-      strokeOpacity: 0.9,
-      strokeWeight: 3.5, // 线条粗
-      map: map,
-    });
+      polyline = new google.maps.Polyline({
+        path: path,
+        geodesic: true,
+        strokeColor: "#FF0000",
+        strokeWeight: 3,
+        map: map
+      });
 
-    // 点击地图添加测距点
-    map.addListener("click", (e) => {
-      addPoint(e.latLng);
-    });
+      map.addListener("click", (e) => {
+        if (polygonClosed) return; // 闭合后禁止继续点击
+        const clickedLatLng = e.latLng;
 
-    document.getElementById("clearBtn").addEventListener("click", clearAll);
-  }
+        // 如果距离第一个点很近，自动闭合
+        if (path.length >= 3 && clickedLatLng.distanceTo(path[0]) < 10000) { 
+          // 小于10km就闭合
+          path.push(path[0]); // 收尾相连
+          polygonClosed = true;
+          updatePolyline();
+          recalcDistanceAndArea();
+          return;
+        }
 
-  // 添加测距点
-  function addPoint(latLng) {
-    path.push(latLng);
-    updatePolyline();
+        path.push(clickedLatLng);
+        addMarker(clickedLatLng);
+        updatePolyline();
+        recalcDistanceAndArea();
+      });
 
-    const marker = new google.maps.Marker({
-      position: latLng,
-      map: map,
-      icon: {
-        path: google.maps.SymbolPath.CIRCLE,
-        scale: 4.5,
-        fillColor: "#000000",
-        fillOpacity: 1,
-        strokeColor: "#FFFFFF",
-        strokeWeight: 1,
-      },
-      clickable: false,
-    });
-    markers.push(marker);
+      document.getElementById("clearBtn").addEventListener("click", clearAll);
+    }
 
-    recalcDistance();
-  }
+    function addMarker(latLng){
+      const marker = new google.maps.Marker({
+        position: latLng,
+        map: map,
+        icon: {
+          path: google.maps.SymbolPath.CIRCLE,
+          scale: 4.5,
+          fillColor: "#000000",
+          fillOpacity: 1,
+          strokeColor: "#FFFFFF",
+          strokeWeight: 1
+        },
+        clickable: false
+      });
+      markers.push(marker);
+    }
 
-  // 更新红色线条，收尾相连
-  function updatePolyline() {
-    if (path.length >= 2) {
-      // 生成闭合路径
-      const closedPath = [...path];
-      closedPath.push(path[0]);
-      polyline.setPath(closedPath);
-    } else {
+    function updatePolyline(){
       polyline.setPath(path);
     }
-  }
 
-  // 重新计算距离和面积
-  function recalcDistance() {
-    totalDistance = 0;
-    for (let i = 1; i < path.length; i++) {
-      totalDistance += haversineDistance(path[i - 1], path[i]);
+    function recalcDistanceAndArea(){
+      totalDistance = 0;
+      for(let i=1; i<path.length; i++){
+        totalDistance += haversineDistance(path[i-1], path[i]);
+      }
+      let area = 0;
+      if(polygonClosed){
+        area = google.maps.geometry.spherical.computeArea(path)/1e6; // km²
+      }
+      document.getElementById("info").innerText = 
+        `总距离：${totalDistance.toFixed(2)} km 面积：${area.toFixed(2)} km²`;
     }
 
-    let text = `总距离：${totalDistance.toFixed(2)} km`;
-
-    // 如果点数 >=3，则计算面积（闭合）
-    if (path.length >= 3) {
-      const area = google.maps.geometry.spherical.computeArea(path) / 1_000_000; // m²→km²
-      text += `　面积：${area.toFixed(2)} km²`;
+    function clearAll(){
+      path = [];
+      totalDistance = 0;
+      polygonClosed = false;
+      polyline.setPath([]);
+      markers.forEach(m => m.setMap(null));
+      markers = [];
+      document.getElementById("info").innerText = "总距离：0 km 面积：0 km²";
     }
 
-    document.getElementById("distance").innerText = text;
-  }
-
-  // 清除所有测距
-  function clearAll() {
-    path = [];
-    totalDistance = 0;
-    polyline.setPath([]);
-    document.getElementById("distance").innerText = "总距离：0 km";
-    markers.forEach((m) => m.setMap(null));
-    markers = [];
-  }
-
-  // 球面距离（km）
-  function haversineDistance(p1, p2) {
-    const R = 6371;
-    const lat1 = p1.lat() * Math.PI / 180;
-    const lat2 = p2.lat() * Math.PI / 180;
-    const dLat = lat2 - lat1;
-    const dLng = (p2.lng() - p1.lng()) * Math.PI / 180;
-    const a = Math.sin(dLat / 2) ** 2 +
-              Math.cos(lat1) * Math.cos(lat2) *
-              Math.sin(dLng / 2) ** 2;
-    return 2 * R * Math.asin(Math.sqrt(a));
-  }
-</script>
+    function haversineDistance(p1,p2){
+      const R = 6371;
+      const lat1 = p1.lat()*Math.PI/180;
+      const lat2 = p2.lat()*Math.PI/180;
+      const dLat = lat2 - lat1;
+      const dLng = (p2.lng()-p1.lng())*Math.PI/180;
+      const a = Math.sin(dLat/2)**2 + Math.cos(lat1)*Math.cos(lat2)*Math.sin(dLng/2)**2;
+      return 2*R*Math.asin(Math.sqrt(a));
+    }
+  </script>
 
 
 
     <!-- 用老版 JS API 正确加载 --> <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1DDVsoYSslYif9JG1EmZt04uUWiZGJgE&callback=initMap"> </script>
   </body>
 </html>
+
 
 
 
