--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
         map.data.addGeoJson(data);
         map.data.setStyle({
-          strokeColor: "#0077FF",
-          strokeWeight: 1.5,
-          strokeOpacity: 0.8,
+          strokeColor: "#000000",
+          strokeWeight: 3,
+          strokeOpacity: 1,
         });
 
         map.data.addListener("click", (e) => {
@@ -175,6 +175,7 @@
     
   </body>
 </html>
+
 
 
 
