--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 
         map.data.addGeoJson(data);
         map.data.setStyle({
-          strokeColor: "#000000",
-          strokeWeight: 3,
-          strokeOpacity: 1,
+          //strokeColor: "#000000",
+          //strokeWeight: 3,
+          //strokeOpacity: 1,
         });
 
         map.data.addListener("click", (e) => {
@@ -146,6 +146,7 @@
     
   </body>
 </html>
+
 
 
 
