--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		  
     	map.data.setStyle(function(feature) {
   			return {
-			    strokeColor: feature.getProperty('stroke') || '#000000',      // 黑色为默认
-			    strokeWeight: feature.getProperty('stroke-width') || 7,       // 7 为默认
+			    strokeColor: feature.getProperty('stroke') || '#c0d945',      // 黑色为默认
+			    strokeWeight: feature.getProperty('stroke-width') || 5,       // 7 为默认
 			    strokeOpacity: feature.getProperty('stroke-opacity') || 1
 			  };
 			});
@@ -149,6 +149,7 @@
     
   </body>
 </html>
+
 
 
 
